2003-10-26  Everton da Silva Marques  <everton@lab.ipaccess.diveo.net.br>

	* gnu/testlet/java/net/MulticastSocket/MulticastSocketTest.java
	(test_MultipleBind): New test method.
	(testall): Call test_MultipleBind.

2003-10-29  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTest2.java:
	DatagramPacket contsructors throw IllegalArgumentException if illegal
	buffer size is given.

2003-10-29  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/BinaryCompatibility/.cvsignore:
	Ignore generated files.

2003-10-26  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/jar/JarInputStream/getNextEntry.java: New
	test.

2003-10-25  Bryce McKinlay  <bryce@mckinlay.net.nz>

	* gnu/testlet/java/lang/reflect/ReflectAccess.java,
	gnu/testlet/java/lang/reflect/sub/OtherPkg.java,
	gnu/testlet/java/lang/reflect/sub/Super.java: New files.

2003-10-24  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/awt/geom/CubicCurve2D/clone.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/Double.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/getBounds2D.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/getCtrlP1.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/getCtrlP2.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/getP1.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/getP2.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/setCurve.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/Float.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/getBounds2D.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/getCtrlP1.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/getCtrlP2.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/getP1.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/getP2.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/setCurve.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/getFlatness.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/getFlatnessSq.java,