@@ -1,3 +1,7 @@
+2003-10-30  Jeff Sturm  <jsturm@one-point.com>
+
+	* gnu/testlet/java/io/ByteArrayOutputStream/subclass.java: New test.
+
 2003-10-26  Everton da Silva Marques  <everton@lab.ipaccess.diveo.net.br>
 
 	* gnu/testlet/java/net/MulticastSocket/MulticastSocketTest.java
